--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   etlxci:
     container_name: etlxci
-    user: "1001:1001"   
+    #user: "1001:1001"   
     image: kedikx/etlxci:latest
     build:
       context: ./ci
@@ -14,7 +14,7 @@ services:
 
   mysql:
     container_name: mysql
-    image: mysql:5.7.12
+    image: mysql:lastest
     network_mode: "service:etlxci"
     environment:
       - MYSQL_ROOT_PASSWORD=test
