--- a/.github/workflows/etlx-build.yml
+++ b/.github/workflows/etlx-build.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8
+        python -m pip install flake8 coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -36,7 +36,10 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run setup.py
       run: |
-        python ./setup.py test
-    #- name: Test with pytest
-    #  run: |
-    #    pytest
+        python ./setup.py --version
+    - name: Run tests
+      run: |
+        coverage run -m unittest discover -t . -s ./tests
+    - name: Upload codecov report
+      uses: codecov/codecov-action@v1
+      
