--- a/.github/workflows/etlx-build.yml
+++ b/.github/workflows/etlx-build.yml
@@ -15,7 +15,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.6', '3.7', '3.8']
+        python-version: ['3.6']
+
+    services:
+      mariadb:
+        image: mysql:latest
+        ports:
+          - 3306
+        env:
+          MYSQL_USER: etlx_user
+          MYSQL_PASSWORD: test
+          MYSQL_DATABASE: etlx_test
+          MYSQL_ROOT_PASSWORD: password
+        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
     - uses: actions/checkout@v2
@@ -37,9 +49,16 @@ jobs:
     - name: Run setup.py
       run: |
         python ./setup.py --version
+    - name: Verify MySQL connection
+      env:
+        DB_PORT: ${{ job.services.mysql.ports[3306] }}
+      run: |
+        while ! mysqladmin ping -h"localhost" -P"$DB_PORT" --silent; do
+          sleep 1
+        done        
     - name: Run tests
       run: |
-        coverage run -m unittest discover -t . -s ./tests
+        coverage run -m unittest discover -t . -s ./etlx_tests
     - name: Upload codecov report
       uses: codecov/codecov-action@v1
       
